feat: add mvp functionality
