# handler/constants.go
@@ -1,0 +1,7 @@
+package handler
+
+const (
+	FULLNAME_FIELD     = "full_name"
+	PASSWORD_FIELD     = "password"
+	PHONE_NUMBER_FIELD = "phone_number"
+)
